--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type": "git",
     "url": "git://github.com/divayang/grunt-local-socket.git"
   },
+  "license": "MIT",
   "engines": {
     "node": ">= 0.8.0"
   },
